// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with custom styles 1`] = `
<View
  style={
    Object {
      "borderRadius": 36,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 36,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
          "paddingBottom": 16,
          "paddingButton": 32,
          "paddingLeft": 20,
          "paddingRight": 12,
          "paddingTop": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with icon on left 1`] = `
<View
  style={
    Object {
      "borderRadius": 36,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 36,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 20,
          "paddingTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with icon on right 1`] = `
<View
  style={
    Object {
      "borderRadius": 36,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 36,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
          "paddingBottom": 16,
          "paddingLeft": 20,
          "paddingRight": 12,
          "paddingTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly without props 1`] = `
<View
  style={
    Object {
      "borderRadius": 36,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 36,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
          "paddingBottom": 16,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        BUTTON
      </Text>
    </View>
  </View>
</View>
`;
